yaml/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: chatbot-ingress
  namespace: chatbot

  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /

spec:

  ingressClassName: haproxy

  rules:

  - host: chatbot.local

    http:

      paths:

      - path: /
        pathType: Prefix

        backend:
          service:
            name: chatbot-frontend

            port:
              number: 80

      - path: /api
        pathType: Prefix

        backend:
          service:
            name: chatbot-backend

            port:
              number: 8000
